tests/cases/standard-library/ok/std-vec-from-slice-in.ari
fn main() -> i64 {
  var source = zone::create(128);
  var target = zone::create(128);
  var vec = std::vec::new<i64>(ref mut source, 3);

  vec.push(6);
  vec.push(7);
  vec.push(8);

  let view = vec.as_slice();
  var copied = std::vec::from_slice_in<i64>(ref mut target, view);

  zone::reset(ref mut source);
  copied.push_in(ref mut target, 9);

  let total = copied.len() + copied.capacity() + copied.get(0) +
      copied.get(1) + copied.get(2) + copied.get(3);

  zone::destroy(source);
  zone::destroy(target);
  return total;
}
